feat: implement core highlight, save, and AI functionality
- Add text selection and highlighting in reader
- Implement AI conversation saving as reflections
- Fix homepage progress tracking
- Add audio control strip with scroll transitions
- Fix build errors in AudioPlayer component
- Update Garden to display highlights and reflections
- Improve Settings page functionality
- Add proper cleanup for audio components

--- a/src/book/introduction/0. Introduction: A Centre That Moves.mdx
+++ b/src/book/introduction/0. Introduction: A Centre That Moves.mdx
@@ -1,4 +1,4 @@
-# 0. Introduction: A Centre That Moves
+# Introduction: A Centre That Moves
 
 This is **not** a book of answers.  
 It’s a book of positions. Of orientations. Of quiet fires and sharp edges.
