Remove AI features, simplify settings page, and remove custom text selection
- Remove all AI-related components and services (AIDrawer, LiveAudio, gemini service)
- Remove custom text selection and highlight save functionality
- Simplify Settings page to only include: dark mode toggle, voice preference, install app, and about section
- Fix SynchronizedCarousel duplicate key warnings
- Clean up unused imports and types

--- a/src/book/Part I: The Axis of Becoming/1. The Axis of Consequence.md
+++ b/src/book/Part I: The Axis of Becoming/1. The Axis of Consequence.md
@@ -5,7 +5,7 @@ This may sound abstract, but it is **not** meant to be.
 It is **not** a philosophy. It is a fact of your existence.
 
 You stand now, reading this, in the direct consequence of every choice you’ve ever made,  
-and every choice that has ever been made for you —  
+and every choice that has ever been made for you –  
 your genetics. Your upbringing. Your instincts. Your fears.  
 All of them are here now, embodied in this moment.
 
@@ -36,7 +36,7 @@ The universe above is as infinite as the universe within us.
 We stand between them, where potential collapses into choice.
 
 Now pause.  
-Think about the last real choice you made — not the small, habitual ones, but the kind that tilted your path.  
+Think about the last real choice you made – not the small, habitual ones, but the kind that tilted your path.  
 
 - Did you choose it out of fear?  
 - Out of love?  
