--- a/src/book/Part I: The Axis of Becoming/4. The Discipline of Becoming.md
+++ b/src/book/Part I: The Axis of Becoming/4. The Discipline of Becoming.md
@@ -11,7 +11,7 @@ And when it does, something quieter must rise in its place.
 
 That something is **discipline**.  
 Not the rigid discipline of punishment or guilt,  
-but the discipline of return  —  
+but the discipline of return  –  
 the practice of remembering what you chose,  
 and why,  
 even when the fire grows dim.
