--- a/src/book/Part III: The Living Axis/13. The Body as Compass.md
+++ b/src/book/Part III: The Living Axis/13. The Body as Compass.md
@@ -51,7 +51,7 @@ You begin to discern:
 Ask yourself:
 
 > **What have I been overriding in my body that wants to be honoured?**  
-> **When in my day do I feel most physically aligned —what am I doing then?**  
+> **When in my day do I feel most physically aligned –what am I doing then?**  
 > **What would it mean to trust my body as a source of wisdom, not resistance?**
 
 This body is **not** a vehicle for becoming.  
