--- a/src/book/Part III: The Living Axis/17. The Unfolding Now.md
+++ b/src/book/Part III: The Living Axis/17. The Unfolding Now.md
@@ -5,7 +5,7 @@ It is **not** a means to an end.
 It is the end becoming beginning,  
 again and again.
 
-We are taught to live toward things —  
+We are taught to live toward things –  
 toward goals,  
 toward identities,  
 toward imagined versions of peace.  
@@ -64,7 +64,7 @@ Unfiltered.
 Unrehearsed.  
 Unrepeatable.
 
-To live from the axis is to live here —  
+To live from the axis is to live here –  
 not grasping,  
 not retreating,  
 but witnessing.  
