--- a/src/book/Part IV: The Horizon Beyond/20. Transcendence Without Escape.md
+++ b/src/book/Part IV: The Horizon Beyond/20. Transcendence Without Escape.md
@@ -17,7 +17,7 @@ To transcend is **not** to float away.
 It is to see wider,  
 to live in a context that reveals your form more clearly.
 
-We often think of transcendence as a leaving —  
+We often think of transcendence as a leaving –  
 of pain, of thought, of body, of boundary.  
 But the deepest transcendence comes **not** from departing the self,  
 but from relating to it differently.
