--- a/src/book/Part IV: The Horizon Beyond/21. Being Part of Something Larger.md
+++ b/src/book/Part IV: The Horizon Beyond/21. Being Part of Something Larger.md
@@ -7,7 +7,7 @@ There is a quiet humility in this.
 And a quiet dignity.
 
 To know that you are not the whole  
-but that the whole is not whole without you —  
+but that the whole is not whole without you –  
 this is what it means to belong.
 
 You are a pattern in the fabric,  
@@ -16,8 +16,8 @@ not isolated.
 And the fabric moves through you  
 just as you move within it.
 
-Everything you do —  
-how you speak, breathe, hold, give, wait —  
+Everything you do –  
+how you speak, breathe, hold, give, wait –  
 reverberates outward,  
 touching what you cannot see.
 
@@ -25,7 +25,7 @@ It’s easy to forget this in a world of personal goals,
 individual narratives,  
 private success.  
 But you are never acting alone.  
-You are always in relation —  
+You are always in relation –  
 to earth, to lineage, to language, to time.  
 Even silence echoes into others.  
 Even stillness has weight.
@@ -43,7 +43,7 @@ You are of it.
 
 You are a breath in a collective lung.  
 A heartbeat in a shared rhythm.  
-A note in a vast composition —  
+A note in a vast composition –  
 not the melody,  
 but without which the melody would sound different.
 
