--- a/src/book/Part IV: The Horizon Beyond/22. The Silence That Holds Us.md
+++ b/src/book/Part IV: The Horizon Beyond/22. The Silence That Holds Us.md
@@ -18,7 +18,7 @@ Not absence.
 But presence without shape.
 
 The silence that holds us is **not** empty.  
-It is full —  
+It is full –  
 of everything we cannot carry with the mind,  
 but somehow know in the bones.
 
@@ -46,7 +46,7 @@ Ask yourself, not aloud, but inwardly:
 
 To live well is **not** to fill every space.  
 It is to trust the ones that remain open.  
-To know that clarity is not the only form of wisdom —  
+To know that clarity is not the only form of wisdom –  
 sometimes, reverence is enough.
 
 You are held.  
