Rename chapter files to match titles and add PDF download feature
- Renamed all chapter markdown files to match their actual titles
- Fixed introduction file extension (.mdx to .md)
- Added outro section to book structure
- Implemented PDF download functionality with jsPDF
- Added download PDF button to BookLandingPage
- Updated bookContent.ts with new filenames and outro
- Updated total chapters count from 27 to 28
- Updated all part order references to include Outro

--- a/src/book/Part I: The Axis of Becoming/2. The Shape of Desire.md
+++ b/src/book/Part I: The Axis of Becoming/2. The Shape of Desire.md
@@ -1,77 +1,116 @@
-# 2. The Shape of Desire
+# **Chapter 2 — The Shape of Desire**
 
-Once you see what you are already becoming,  
-you cannot unsee it.
+Once you see the direction you’re already moving,  
+another question rises beneath it — quieter in volume, heavier in truth:
 
-It might comfort you.  
-It might disturb you.  
-It might feel like a long-forgotten truth finally rising to the surface.  
-But whatever it is, it is yours.  
-It was always there,  
-in the patterns of your days,  
-the tone of your thoughts,  
-the way your body moves when no one is watching.
+**What is pulling me forward?**
 
-And now that it is seen,  
-the question becomes:  
-*Is this what I truly want to become?*
+Not the surface cravings.  
+Not the reflexive wants that flare and vanish.  
+The deeper current —  
+the one that returns after distraction, after exhaustion,  
+even after fear.
 
-This is **not** a question of dreams or goals.  
-It is a question of alignment.  
-Not what you fantasise about at your peak,  
-but what your being resonates with at rest.  
-What fits the grain of your soul.
+This current is **desire**,  
+but not the kind we usually name.
 
-Desire is **not** always loud.  
-Sometimes it’s a whisper beneath the noise.  
-Sometimes it’s buried beneath the expectations of others.  
-Sometimes it’s been so long ignored, it begins to masquerade as fatigue.
+Most desires are noise —  
+stimulus dressed as purpose,  
+old wounds wearing the mask of ambition,  
+the residue of other people’s expectations.  
+They burn quickly and leave nothing.
 
-But true desire, the kind worth listening to, does **not** shout.  
-It draws.  
-It feels like gravity.  
-Not the gravity of obligation, but of returning.  
-A coming home.
+Beneath them lies something steadier —  
+a gravitational pull.
 
-And yet, not every desire is trustworthy.  
-Some are inherited.  
-Some are reactions.  
-Some are cravings dressed as purpose.
+In physics, every structure has a natural frequency,  
+a way of moving that costs the least energy.  
+Align with it and the system resonates.  
+Fight it and the resistance turns into heat.
 
-So before you follow a desire, ask it questions:
+Desire works the same way.
 
-- **Where did you come from?**  
-- **What need are you trying to meet?**  
-- **Will you still be here when I’m tired, bored, uncertain?**  
-- **Do you feed my becoming, or just my avoidance?**
+Your deeper self has a frequency —  
+a direction that feels like clarity,  
+even when the path toward it is uncomfortable.  
+You recognise it not by excitement,  
+but by the **ease** that appears when you move in its direction  
+and the **drag** you feel when you turn away.
 
-True desire will **not** flinch when questioned.  
-It will **not** bristle.  
-It will settle,  
-like something that has been waiting for you to catch up.
+Ask yourself:
 
-And once it settles, it becomes a compass.  
-Not a map, not a guarantee,  
-but a direction.
+**What remains when the distractions fall away?**  
+**What returns even after I’ve tried to ignore it?**  
+**What feels like alignment rather than escape?**
 
-Now pause.  
-Ask yourself gently, without pressure:
+Desire is not abstract.  
+It behaves like matter.
 
-> What do I want to become, not as a role, but as a presence?
+Like gravity —  
+the inevitable fall,  
+the universal sensation of sitting next to someone larger on a comfortable seat  
+and falling into their weight,  
+their well,  
+their curvature.
 
-> If I walked toward that quietly, what would I need to leave behind?
+You don’t decide to lean.  
+The space reshapes around the mass,  
+and your body follows the geometry without thought or negotiation.
 
-> Can I live with the cost of becoming that person?
+True desire works the same way.
 
-You do **not** need to answer all at once.  
-But you do need to listen.
+It doesn’t shout.  
+It pulls.  
+It draws you toward the version of yourself that requires no performance,  
+no inflation,  
+no justification.  
+It reorganises your internal landscape  
+the moment you stop resisting.
 
-Desire is **not** indulgence.  
-It is guidance, when it is clean.  
-And you cleanse it by witnessing it fully,  
-asking it to speak its origin,  
-and letting the false ones fall away.
+The body recognises truth long before the mind does:  
+a deeper breath,  
+a jaw released,  
+a chest that opens by a degree.  
+Small signals —  
+but unmistakable.
 
-You are not here to chase someone else’s becoming.  
-You are here to choose your own,  
-but only once you know its true shape.  
+Your system knows when you are moving toward something that fits.
+
+But not every deep pull is truth.  
+Some desires are distortions —  
+the echo of old pain trying to complete itself through achievement, control, or escape.  
+They feel urgent,  
+but they do not feel right.
+
+To tell the difference, interrogate the pull:
+
+**Where did you come from?**  
+**What pain do you soothe?**  
+**Does this make me larger, or does it collapse me inward?**
+
+True desire does not shrink you.  
+It expands the internal space you can stand inside.
+
+It is not fantasy.  
+It is memory —  
+the memory of who you were before you started contorting yourself  
+to fit the world around you.
+
+You already know what your real desire is.  
+You’ve known for years.  
+You’ve felt it in quiet moments when you stop pretending.  
+You’ve felt it in the clarity that appears when your defences drop.  
+You’ve felt it in the orientation of your body  
+when you allow yourself a moment of honesty.
+
+This is the shape of your becoming.  
+The curvature beneath the noise.  
+The gravitational well at the centre of your life.
+
+You don’t need to chase it.  
+You need to stop resisting the fall.
+
+Once you name it,  
+you will no longer wonder what you want.  
+You will only wonder  
+whether you are willing to move in its direction.
